--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="shortcut icon" type="image/x-icon" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>Movie Showtimes</title>
   </head>
   <body>
     <div id="app"></div>
